--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    width: 100%;
+    height: 90px;
+    position: fixed;
+    z-index: 10;
 }
 
 .nav-menu {
