--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -35,16 +35,21 @@
     align-items: center;
 }
 
+.hero .content span {
+    color: #18c0f8;
+}
+
 .hero .content h1 {
     font-size: 4rem;
-    padding: 0.6rem 0 1.5rem;
+    padding: 0rem 0 1.5rem;
 }
 
 .hero .content p {
     font-size: 1.4rem;
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 1.8px;
     text-transform: uppercase;
+    padding-left: 0.3rem;
 }
 
 .hero .content .btn {
