--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     width: 100%;
     height: 70px;
     position: fixed;
@@ -20,12 +20,17 @@
 }
 
 .nav-menu li {
-    padding: 0 1rem;
+    padding: 0 1.5rem;
 }
 
 .nav-menu li a {
     font-size: 1.1rem;
     font-weight: 500;
+    transition: 0.3s;
+}
+
+.nav-menu li a:hover {
+    color: aqua;
 }
 
 .hamburger {
@@ -58,7 +63,8 @@
     }
 
     .nav-menu li a {
-        font-size: 2rem;
+        font-size: 1.5rem;
+        text-transform: uppercase;
     }
 
     .hamburger {
