--- a/src/components/PricingCardStyle.css
+++ b/src/components/PricingCardStyle.css
@@ -1,5 +1,11 @@
 .pricing {
     margin: 5rem 3rem;
+    text-align: center;
+}
+
+.pricing-heading {
+    margin: 2rem auto;
+
 }
 
 .card-container {
@@ -16,6 +22,11 @@
     align-items: center;
     text-align: center;
     border-radius: 1rem ;
+    transition: 0.3s ease;
+}
+
+.card:hover {
+    scale: 1.05;
 }
 
 .card .bar {
@@ -47,6 +58,7 @@
     margin:1.2rem auto;
     display: block;
     border-radius: 1rem;
+    
 }
 
 @media screen and (max-width: 800px) {
