AboutMe added and some bug fixed about style

--- a/src/components/ProjectCardStyle.css
+++ b/src/components/ProjectCardStyle.css
@@ -36,21 +36,31 @@
     padding: 2rem 1.5rem;
     border-radius: 1rem;
     transition: 0.3s ease;
+    
 }
 
 .project .projects-card:hover {
-    scale: 1.03;
+    scale: 1.02;
+    background-color: #38003890;
+    box-shadow: 0 0 10px 2px #980198;
 }
 
 .project-img {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    border-radius: 1rem;
 }
 
 .project .project-img img {
     width: 100%;
     border-radius: 1rem;
+    transition: 0.5s ease;
+}
+
+.project .project-img img:hover {
+    scale: 1.2;
 }
 
 .project h2 {
@@ -75,8 +85,8 @@
     padding: 12px 24px;
     font-size: 1rem;
     text-transform: uppercase;
-    background: #149ECA;
-    color: #222;
+    background: #02678977;
+    color: #fbfbfb;
     font-weight: 600;
     cursor: pointer;
     border: none;
