--- a/src/components/FormStyle.css
+++ b/src/components/FormStyle.css
@@ -32,11 +32,11 @@ border-radius: 1rem;
 }
 
 .form-container input,textarea {
-    background: #000;
+    background: rgba(59, 59, 59, 0.034);
     outline: none;
     border: 1px solid rgb(120, 120, 120);
     font-size: 1rem;
-    padding: 1rem;
+    padding: 0.7rem;
     border-radius: 0.3rem;
     color: white;
 }
@@ -45,7 +45,7 @@ border-radius: 1rem;
 
     margin-top: 1.5rem;
     margin-bottom: 0.3rem;
-    color: white;
+    color: rgba(255, 255, 255, 0.708);
     font-size: 1.2rem;
 
 }
@@ -69,4 +69,19 @@ border-radius: 1rem;
     background: rgba(255, 255, 255, 0.2);
     color: white;
     transition: 0.3s;
+  }
+
+  @media screen and (max-width: 1000px) {
+
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        width: 390px;
+        padding: 2rem 2rem;
+        margin-left: 0rem;
+        background-color: rgba(0, 0, 0, 0.493);
+        border-radius: 1rem;
+        
+        }
+    
   }
