--- a/src/components/HeroStyle.css
+++ b/src/components/HeroStyle.css
@@ -4,12 +4,13 @@
     position: relative;
 }
 
-.hero-img {
+.hero-video {
     width: 100%;
     height: 100%;
-    background-size: cover;
+    /* background-size: cover; */
     object-fit: cover;
-    background-position: center;
+    /* background-position: center; */
+    z-index: -1;
 }
 
 .mask::after {
@@ -19,7 +20,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.745);
+    background-color: rgba(0, 0, 0, 0.543);
 }
 
 .hero {
