--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -46,7 +46,8 @@
         align-items: center;
         width: 100%;
         height: 100vh;
-        background: rgba(0, 0, 0, 0.9);
+        background: rgba(0, 0, 0, 0.45);
+        backdrop-filter: blur(20px);
         position: absolute;
         top: 0;
         left: -100%;
