--- a/src/components/FormStyle.css
+++ b/src/components/FormStyle.css
@@ -3,7 +3,11 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 6rem 0;
+    margin: 6rem auto;
+    overflow: hidden;
+    width: 95vw;
+    background-color: transparent;
+
 }
 
 .form h1 {
@@ -12,22 +16,25 @@
 
 .form-img {
     width: 500px;
+    
 }
 
 .form-img img {
    width: 100%;
-   padding: 0rem 2rem;
+   padding: 0rem 1rem;
     
 }
 
 .form-container {
 display: flex;
 flex-direction: column;
-width: 600px;
+width: 500px;
 padding: 2rem 2rem;
 margin-left: 5rem;
 background-color: rgba(59, 59, 59, 0.493);
 border-radius: 1rem;
+
+
 
 }
 
@@ -81,6 +88,7 @@ border-radius: 1rem;
         margin-left: 0rem;
         background-color: rgba(0, 0, 0, 0.493);
         border-radius: 1rem;
+        overflow: hidden;
         
         }
     
