--- a/src/components/AboutMeStyle.css
+++ b/src/components/AboutMeStyle.css
@@ -18,7 +18,8 @@
 
 .aboutMe-container .left p {
     color: rgba(255, 255, 255, 0.735);
-    margin-top: 1rem;
+    margin-top: 1.5rem;
+    text-align: justify;
 }
 
 .aboutMe-container .right {
