--- a/src/components/ProfileStyle.css
+++ b/src/components/ProfileStyle.css
@@ -3,14 +3,17 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 3rem 2rem;
+    
 }
 
 .profile .profile-container {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    height: 60vh;
+    margin: 0 auto;
+    padding: 3rem 1rem;
 
 }
 
@@ -24,6 +27,7 @@
     box-shadow: 0 0 5px 5px rgba(0, 75, 132, 0.512);
     animation: animate 5s ease-in-out infinite;
     transition: all 1s ease-in-out;
+    
 
 }
 
@@ -46,6 +50,7 @@
     display: flex;
     justify-content: center;
     align-items: start;
+    padding: 0 0 0 3rem;
     
 }
 
@@ -56,4 +61,76 @@
 .profile .profile-container .right .about-text {
     margin: 1rem 0;
     color: rgba(255, 255, 255, 0.705);
+}
+
+.social-link {
+    margin-top: 0rem;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin-right: 0;
+    gap: 1rem;
+    
+}
+
+.social-icon-cv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cv {
+    margin-right: 1rem;
+}
+
+@media screen and (max-width: 500px) {
+
+    .profile {
+        width: 100%;
+        max-width: 1280px;
+        margin: 0;
+        padding: 0.5rem 1rem;
+        
+    }
+
+    .profile .profile-container .left .bubble {
+        width: 180px;
+        height: 180px;
+        background-size: cover;
+        background-position: center right 25%;
+        margin: 2rem 0;
+    }
+        
+    .profile .profile-container .right {
+        width: 100%;
+        max-width: 300px;
+        height: 100%;
+        max-height: 70vh;
+        margin: auto 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+    }
+
+    .social-icon-cv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .social-link {
+        margin-top: 1rem;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        margin-right: 0;
+        
+    }
+
+    .cv {
+        margin: 1rem 0;
+    }
+
 }
