--- a/src/components/HeroAllStyle.css
+++ b/src/components/HeroAllStyle.css
@@ -29,7 +29,10 @@
 }
 
 .heading h1 {
-  font-size: 2.4rem;
+  font-size: 5rem;
+  background: linear-gradient(to right, #2dafff, #ff3399);
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .heading p {
