Hero heading text fixed for mobile device

--- a/src/components/HeroAllStyle.css
+++ b/src/components/HeroAllStyle.css
@@ -38,3 +38,13 @@
 .heading p {
   font-size: 1.3rem;
 }
+
+
+@media screen and (max-width: 700px) {
+
+  .heading h1 {
+    font-size: 3rem;
+    
+  }
+  
+}
