--- a/src/components/FooterStyle.css
+++ b/src/components/FooterStyle.css
@@ -1,7 +1,7 @@
 .footer {
     width: 100%;
     padding: 4rem 0.7rem;
-    background-color: rgba(20, 20, 20, 0.717);
+    background-color: var(--foreground-color);
 }
 
 .footer-container {
