--- a/src/components/HeroAllStyle.css
+++ b/src/components/HeroAllStyle.css
@@ -1,7 +1,7 @@
 .heroAll-img {
   width: 100%;
   height: 70vh;
-  background-color: rgba(0, 0, 0, 0.753);
+  background-color: var(--backgroundOpacity-color);
   position: relative;
 }
 
@@ -21,7 +21,6 @@
 .heading {
   width: 100%;
   height: 100%;
-  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
