--- a/src/components/ProjectCardStyle.css
+++ b/src/components/ProjectCardStyle.css
@@ -1,5 +1,5 @@
 *{
-    color: #149ECA;
+    color: var(--secondary-color);
 }
 
 .project {
@@ -32,7 +32,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: #282828b6;
+    background: var(--foreground-color);
     padding: 2rem 1.5rem;
     border-radius: 1rem;
     transition: 0.3s ease;
@@ -41,8 +41,8 @@
 
 .project .projects-card:hover {
     scale: 1.02;
-    background-color: #38003890;
-    box-shadow: 0 0 10px 2px #980198;
+    background-color: var(--hoverDiv-color);
+    box-shadow: 0 0 10px 2px var(--hoverGlow-color);
 }
 
 .project-img {
@@ -68,7 +68,7 @@
 }
 
 .project p {
-    color: rgba(255, 255, 255, 0.703);
+    color: var(--normalText-color);
     margin-bottom: 1rem;
     padding: 0 0.3rem;
     text-align: justify;
@@ -89,8 +89,8 @@
     padding: 12px 24px;
     font-size: 1rem;
     text-transform: uppercase;
-    background: #02678977;
-    color: #fbfbfb;
+    background: var(--btn-color);
+    color: var(--normalText-color);
     font-weight: 600;
     cursor: pointer;
     border: none;
@@ -100,8 +100,8 @@
   }
   
   .project-btn:hover {
-    background: rgba(255, 255, 255, 0.2);
-    color: white;
+    background: var(--secondaryHover-color);
+    color: var(--normalText-color);
     transition: 0.3s;
   }
 
