--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,13 @@
   box-sizing: border-box;
 }
 
+
 body {
-  background-color: #0D1117;
+  background-color: var(--background-color);
 }
+
 h1, h2, h3, h4, p, a {
-  color: white;
+  color: var(--headingText-color);
   text-decoration: none;
 }
 
@@ -23,7 +25,7 @@ ul {
   padding: 12px 32px;
   font-size: 1rem;
   text-transform: uppercase;
-  background: #149ECA;
+  background: var(--secondary-color);
   color: #222;
   border: 1px solid white;
   font-weight: 600;
@@ -34,12 +36,33 @@ ul {
 .btn-light {
   background: transparent;
   color: white;
-  border: 1px solid #149ECA;
+  border: 1px solid var(--secondary-color);
 }
 
 .btn:hover {
-  background: rgba(255, 255, 255, 0.2);
+  background: var(--secondaryHover-color);
   color: white;
+  transition: 0.3s;
+}
+
+
+.submit-btn {
+  margin: 2rem 0;
+  padding: 12px 24px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  background: var(--btn-color);
+  color: #fbfbfb;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.3rem;
+}
+
+
+
+.submit-btn:hover {
+  background: var(--secondaryHover-color);
   transition: 0.3s;
 }
 
