Theme toggle added with icon

--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -38,6 +38,17 @@
     display: none;
 }
 
+.toggle-icon {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    border-radius: 5rem;
+    font-size: 2rem;
+
+}
+
+
+
 
 
 @media screen and (max-width: 640px) {
