--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,22 @@
     --secondaryHover-color: rgba(255, 255, 255, 0.2);
     --btn-color: #02678977;
     --backgroundOpacity-color:  rgba(18, 25, 34, 0.735);
+    --cardBoxShadow-color: #149cca00;
   }
 
 
 .light-theme {
     --background-color:  #e5f0ff;
-    --foreground-color:  #a7caff86;
+    --foreground-color:  #b3d1ff49;
     --headingText-color: rgb(0, 0, 0);
     --normalText-color: rgba(41, 41, 41, 0.751);
-    --hoverDiv-color: #38003890;
-    --hoverGlow-color: #98019884;
+    --hoverDiv-color: #ffffff20;
+    --hoverGlow-color: #4ebee346;
     --secondary-color: #149ECA;
-    --secondaryHover-color: rgba(255, 255, 255, 0.2);
-    --btn-color: #02678977;
-    --backgroundOpacity-color:  rgba(138, 189, 255, 0.632);
+    --secondaryHover-color: rgba(101, 101, 101, 0.5);
+    --btn-color: #02678950;
+    --backgroundOpacity-color:  rgba(112, 181, 223, 0.374);
+    --cardBoxShadow-color: #348ca931;
   }
 
 
