--- a/src/components/ProjectCardStyle.css
+++ b/src/components/ProjectCardStyle.css
@@ -36,6 +36,8 @@
     padding: 2rem 1.5rem;
     border-radius: 1rem;
     transition: 0.3s ease;
+    /* box-shadow: 1px 2px 10px 5px var(--cardBoxShadow-color); */
+    box-shadow: 4px 4px 7px var(--cardBoxShadow-color);
     
 }
 
@@ -85,25 +87,7 @@
 }
 
 
-.project-btn {
-    padding: 12px 24px;
-    font-size: 1rem;
-    text-transform: uppercase;
-    background: var(--btn-color);
-    color: var(--normalText-color);
-    font-weight: 600;
-    cursor: pointer;
-    border: none;
-    border-radius: 0.3rem;
-    width: 155px;
-    
-  }
-  
-  .project-btn:hover {
-    background: var(--secondaryHover-color);
-    color: var(--normalText-color);
-    transition: 0.3s;
-  }
+
 
   @media screen and (max-width: 500px) {
 
