--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -18,10 +18,12 @@
 
 .nav-menu {
     display: flex;
+    margin-left: 50rem;
 }
 
 .nav-menu li {
     padding: 0 1.5rem;
+    
 }
 
 .nav-menu li a {
@@ -43,7 +45,8 @@
     border: none;
     outline: none;
     border-radius: 5rem;
-    font-size: 2rem;
+    font-size: 1.8rem;
+    
 
 }
 
@@ -66,6 +69,7 @@
         left: -100%;
         z-index: -3;
         transition: 0.2s ease;
+        margin-left: 0rem;
     }
 
     .nav-menu.active {
@@ -83,6 +87,12 @@
 
     .hamburger {
         display: initial;
+    }
+
+    .toggle-icon {
+        
+        font-size: 1.5rem;
+    
     }
 }
  
