skills progress section added

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
     --btn-color: #02678977;
     --backgroundOpacity-color:  rgba(18, 25, 34, 0.735);
     --cardBoxShadow-color: #149cca00;
+    color: rgb(150, 150, 150);
   }
 
 
