--- a/src/components/skills/SkillCard.css
+++ b/src/components/skills/SkillCard.css
@@ -1,5 +1,5 @@
 .skills-card {
-    border: 1px solid rgb(111, 0, 196);
+    border: 1px solid rgba(111, 0, 196, 0.584);
     border-radius: 0.65rem;
     padding: 2.5rem;
     text-align: center;
@@ -28,7 +28,7 @@
     align-items: center;
     justify-content: center;
     background: #250047;
-    border: 1px solid rgb(109, 0, 192);
+    border: 1px solid rgba(109, 0, 192, 0.521);
     border-radius: 0.65rem;
     position: absolute;
     top: -1rem;
