--- a/src/components/SkillsInfoCard/SkillsInfoCard.css
+++ b/src/components/SkillsInfoCard/SkillsInfoCard.css
@@ -1,7 +1,7 @@
 .skills-info-card {
     width: 45vw;
     min-height: 23rem;
-    border: 1.5px solid rgb(89, 0, 152);
+    border: 1.5px solid rgba(89, 0, 152, 0.68);
     border-radius: 0.65rem;
     backdrop-filter: blur(1rem); 
 
@@ -49,7 +49,7 @@
 .skills-progress {
     width: 0%;
     height: 0.5rem;
-    background: linear-gradient(270deg, rgb(128, 0, 167), rgb(108, 17, 255));
+    background: linear-gradient(270deg, rgba(128, 0, 167, 0.616), rgba(108, 17, 255, 0.676));
     border-radius: 0.5rem;
     transition: all 0.5s ease-in-out;
 }
@@ -58,7 +58,7 @@
     .skills-info-card {
         width: 85vw;
         min-height: 25rem;
-        border: 1.5px solid rgb(89, 0, 152);
+        border: 1.5px solid rgba(89, 0, 152, 0.724);
         border-radius: 0.65rem;
         backdrop-filter: blur(1rem); 
     
