--- a/src/components/ProfileStyle.css
+++ b/src/components/ProfileStyle.css
@@ -44,7 +44,7 @@
 
 
 .profile .profile-container .left .bubble {
-    background-image: url(https://scontent.fcla2-1.fna.fbcdn.net/v/t39.30808-6/338897597_529577252691776_8410372030440569174_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFrJMn4-ZP7K_RhplsEcdEs-BSDGGYybd74FIMYZjJt3oXWxzJRGe840SAx-j8WQJ7tY_67mL3uDj-vSzBTkU_7&_nc_ohc=_KKJQzN7Y08AX9m4pU9&_nc_zt=23&_nc_ht=scontent.fcla2-1.fna&oh=00_AfDp6E34LhkkXoUNH5-i7Pjf-e47X-Nf6FVMNQXJDSB-8g&oe=658754D1);
+    background-image: url(https://i.postimg.cc/85g7Lb6V/tanvir.jpg);
     width: 380px;
     height: 380px;
     background-size: cover;
